-- Users Table
CREATE TABLE USERS (
    USER_ID NUMBER GENERATED ALWAYS AS IDENTITY PRIMARY KEY,
    EMAIL VARCHAR2(100) UNIQUE NOT NULL,
    PASSWORD VARCHAR2(100) NOT NULL,
    USER_TYPE VARCHAR2(20) CHECK (USER_TYPE IN ('student', 'company', 'admin')) NOT NULL,
    CREATED_AT TIMESTAMP DEFAULT CURRENT_TIMESTAMP
);

-- Students Table
CREATE TABLE STUDENTS (
    STUDENT_ID NUMBER GENERATED ALWAYS AS IDENTITY PRIMARY KEY,
    USER_ID NUMBER NOT NULL,
    FIRST_NAME VARCHAR2(50) NOT NULL,
    LAST_NAME VARCHAR2(50) NOT NULL,
    COLLEGE VARCHAR2(100),
    DEGREE VARCHAR2(50),
    GRADUATION_YEAR NUMBER(4),
    SKILLS VARCHAR2(500),
    RESUME_URL VARCHAR2(255),
    PHONE VARCHAR2(15),
    BIO VARCHAR2(1000),
    CONSTRAINT FK_STUDENT_USER FOREIGN KEY (USER_ID) REFERENCES USERS(USER_ID) ON DELETE CASCADE
);

-- Companies Table
CREATE TABLE COMPANIES (
    COMPANY_ID NUMBER GENERATED ALWAYS AS IDENTITY PRIMARY KEY,
    USER_ID NUMBER NOT NULL,
    COMPANY_NAME VARCHAR2(100) NOT NULL,
    INDUSTRY VARCHAR2(100),
    LOCATION VARCHAR2(100),
    WEBSITE VARCHAR2(255),
    DESCRIPTION VARCHAR2(1000),
    LOGO_URL VARCHAR2(255),
    APPROVED NUMBER(1) DEFAULT 0,
    CONSTRAINT FK_COMPANY_USER FOREIGN KEY (USER_ID) REFERENCES USERS(USER_ID) ON DELETE CASCADE
);

-- Internships Table
CREATE TABLE INTERNSHIPS (
    INTERNSHIP_ID NUMBER GENERATED ALWAYS AS IDENTITY PRIMARY KEY,
    COMPANY_ID NUMBER NOT NULL,
    TITLE VARCHAR2(100) NOT NULL,
    DESCRIPTION VARCHAR2(2000) NOT NULL,
    REQUIREMENTS VARCHAR2(1000),
    LOCATION VARCHAR2(100),
    TYPE VARCHAR2(20) CHECK (TYPE IN ('remote', 'onsite', 'hybrid')),
    DURATION VARCHAR2(50),
    STIPEND VARCHAR2(50),
    APPLICATION_DEADLINE DATE,
    POSTED_DATE TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    STATUS VARCHAR2(20) DEFAULT 'open' CHECK (STATUS IN ('open', 'closed')),
    CONSTRAINT FK_INTERNSHIP_COMPANY FOREIGN KEY (COMPANY_ID) REFERENCES COMPANIES(COMPANY_ID) ON DELETE CASCADE
);

-- Applications Table
CREATE TABLE APPLICATIONS (
    APPLICATION_ID NUMBER GENERATED ALWAYS AS IDENTITY PRIMARY KEY,
    STUDENT_ID NUMBER NOT NULL,
    INTERNSHIP_ID NUMBER NOT NULL,
    APPLY_DATE TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    STATUS VARCHAR2(20) DEFAULT 'applied' CHECK (STATUS IN ('applied', 'shortlisted', 'interview', 'selected', 'rejected')),
    COVER_LETTER VARCHAR2(2000),
    LAST_UPDATED TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT FK_APPLICATION_STUDENT FOREIGN KEY (STUDENT_ID) REFERENCES STUDENTS(STUDENT_ID) ON DELETE CASCADE,
    CONSTRAINT FK_APPLICATION_INTERNSHIP FOREIGN KEY (INTERNSHIP_ID) REFERENCES INTERNSHIPS(INTERNSHIP_ID) ON DELETE CASCADE,
    CONSTRAINT UQ_STUDENT_INTERNSHIP UNIQUE (STUDENT_ID, INTERNSHIP_ID)
);

-- Create sequence for IDs
CREATE SEQUENCE USER_SEQ START WITH 1 INCREMENT BY 1;
CREATE SEQUENCE STUDENT_SEQ START WITH 1 INCREMENT BY 1;
CREATE SEQUENCE COMPANY_SEQ START WITH 1 INCREMENT BY 1;
CREATE SEQUENCE INTERNSHIP_SEQ START WITH 1 INCREMENT BY 1;
CREATE SEQUENCE APPLICATION_SEQ START WITH 1 INCREMENT BY 1;

-- Create an admin user
INSERT INTO USERS (EMAIL, PASSWORD, USER_TYPE) 
VALUES ('admin@example.com', 'hashed_password_here', 'admin');